update gamedata files

--- a/src/gamedata/AchievementComponentsClient.json
+++ b/src/gamedata/AchievementComponentsClient.json
@@ -8716,6 +8716,30 @@
     [201014,1,1,201028,"Inner Turmoil - Don't attempt to charm or mesmerize any constructs or longings."],
     [201014,2,1,201029,"Inner Turmoil - Never fail to appease a compulsion."],
     [201014,3,1,201030,"Inner Turmoil - Do not allow yourself to be overcome with Self-Recrimination."],
+    [201015,1,1,201031,"Firiona Vie in Shadeweaver's Thicket - Diary of the Jade - The Discovery"],
+    [201015,2,1,201032,"Dreezil Stickens in Misty Thicket - Diary of the Jade - The Search"],
+    [201015,3,1,201033,"Firiona Vie in Shadeweaver's Thicket - Back to Square One"],
+    [201015,4,1,201034,"Firiona Vie in Shadeweaver's Thicket - On the Jade Thief's Trail"],
+    [201015,5,1,201035,"Faeta Glor in Shadeweaver's Thicket - Something Unexpected"],
+    [201015,6,1,201036,"Alaston Dianthus in Shadeweaver's Thicket - The Doke Trio"],
+    [201016,1,1,201037,"Dreezil Stickens in Misty Thicket - Diary of the Jade - The Tests"],
+    [201016,2,1,201038,"Firiona Vie in Shadeweaver's Thicket - The Great Jade Idol Caper"],
+    [201016,3,1,201039,"Faeta Glor in Shadeweaver's Thicket - The Secret Sponsor"],
+    [201017,1,1,201040,"A Jade Statue in Shadeweaver's Thicket"],
+    [201017,2,1,201041,"A Jade Statue in Shadeweaver's Thicket"],
+    [201017,3,1,201042,"A Jade Statue in Shadeweaver's Thicket"],
+    [201017,4,1,201043,"A Jade Statue in Shadeweaver's Thicket"],
+    [201017,5,1,201044,"A Jade Statue in Shadeweaver's Thicket"],
+    [201017,6,1,201045,"A Jade Statue in Shadeweaver's Thicket"],
+    [201017,7,1,201046,"A Jade Statue in Shadeweaver's Thicket"],
+    [201017,8,1,201047,"A Jade Statue in Shadeweaver's Thicket"],
+    [201017,9,1,201048,"A Jade Statue in Shadeweaver's Thicket"],
+    [201017,10,1,201049,"A Jade Statue in Shadeweaver's Thicket"],
+    [201017,11,1,201050,"A Jade Statue in Shadeweaver's Thicket"],
+    [201017,12,1,201051,"A Jade Statue in Shadeweaver's Thicket"],
+    [201017,13,1,201052,"A Jade Statue in Shadeweaver's Thicket"],
+    [201017,14,1,201053,"A Jade Statue in Shadeweaver's Thicket"],
+    [201017,15,1,201054,"A Jade Statue in Shadeweaver's Thicket"],
     [202105,0,1,270993,"Ginjleg Gigglegibber in Timorous Deep - Frostfell - Case of the Misplaced Dollies"],
     [202105,1,1,270994,"Ganjleg Gigglegibber in The Plane of Knowledge - Frostfell - Saga of the Empty Purse"],
     [202105,2,1,270995,"Belumb, the Yeti in Timorous Deep - Frostfell - An Adorable Yeti Doll"],
@@ -25083,6 +25107,16 @@
     [20231102,15,1,271207,"Echoforged Cracked Gnome Bone"],
     [20231102,16,1,271208,"Echoforged Cracked Half Elf Bone"],
     [20231102,17,1,271209,"Echoforged Cracked Halfling Bone"],
+    [20250001,1,2,44249,"Achievement: Erollisi Day: Why Do We Fall"],
+    [20250001,2,1,44250,"Achievement: Anniversary: 26th Anniversary Tasks"],
+    [20250001,3,1,44251,"Achievement: Anniversary: 26th Anniversary Mission"],
+    [20250001,4,1,44252,"Achievement: Anniversary: 26th Anniversary Special Items"],
+    [20250001,5,1,44253,"Achievement: Bristlebane Day: Cold Blooded"],
+    [20250001,6,1,44254,"Achievement: Tempest Festival: TBD"],
+    [20250001,7,1,44255,"Achievement: Stone Cold Summer: TBD"],
+    [20250001,8,1,44256,"Achievement: Nights of the Dead: TBD"],
+    [20250001,9,1,44257,"Achievement: Champion's Festival: TBD"],
+    [20250001,10,1,44258,"Achievement: Frostfell: TBD"],
     [20250201,1,1,271263,"Darenne K`Reil in The Overthere - Only Fools Fall In"],
     [20250201,2,1,271264,"Muku Wolfeetz in The Overthere - Lures Hurt"],
     [20250201,3,1,271265,"Toxon Frennor in The Overthere - Crazy Little Thing"],
@@ -25095,6 +25129,28 @@
     [20250202,5,1,271272,"Love Potion No. 6"],
     [20250202,6,1,271273,"Love Potion No. 7"],
     [20250202,7,1,271274,"Love Potion No. 8"],
+    [20250401,0,1,271275,"Kiroric Huk in the Twilight Sea - Bristlebane Day - Cold Blooded"],
+    [20250401,1,1,271276,"Kotunm in the Twilight Sea - Bristlebane Day - Home Sweet Foam"],
+    [20250401,2,1,271277,"Kotunm in the Twilight Sea - Bristlebane Day - Hot Footed"],
+    [20250402,0,1,271278,"Kotunm in the Twilight Sea - Bristlebane Day - A Cure for Kiroric"],
+    [20250403,0,1,271279,"Turn Around And Kick to Three: Kill three kingsnakes."],
+    [20250403,1,1,271280,"Hop To It: Cure Kiroric in less than 30 minues."],
+    [20250404,0,1,271281,"Poison Dart Frog Skin"],
+    [20250404,1,1,271282,"Green Tree Frog Skin"],
+    [20250404,2,1,271283,"Glass Frog Skin"],
+    [20250404,3,1,271284,"Golden Poison Frog Skin"],
+    [20250404,4,1,271285,"Cane Toad Skin"],
+    [20250404,5,1,271286,"White-Lined Frog Skin"],
+    [20250404,6,1,271287,"Twilight River Frog Skin"],
+    [20250404,7,1,271288,"Smokey Forest Frog Skin"],
+    [20250405,0,1,271289,"Twilight Sea Midge"],
+    [20250405,1,1,271290,"Black Fly"],
+    [20250405,2,1,271291,"Tegi Mite"],
+    [20250405,3,1,271292,"Scarlet Desert Fly"],
+    [20250405,4,1,271293,"Luclin Gnat"],
+    [20250405,5,1,271294,"Lunar Mosquito"],
+    [20250405,6,1,271295,"Fungus Grove Fly"],
+    [20250405,7,1,271296,"Sea Tick"],
     [21000000,1,1,21000000,"Hearing the Call"],
     [21000000,2,1,21000001,"Worlds Apart"],
     [21000000,3,1,21000002,"Look Into The Future"],
@@ -26790,7 +26846,7 @@
     [27083040,7,1,27000493,"Glacial Ice Stone"],
     [30000010,1,1,270873,"Emissary of Erollisi in New Tanaan - Things Are Best with Friends"],
     [30000010,2,1,270874,"Grimble Grumblemaker in New Tanaan - The Perfect Companion"],
-    [30000010,3,2,270875,"Collect all 16 of Grimble Grumblemaker's 'gifts.'"],
+    [30000010,3,2,270875,"Collect 15 of Grimble Grumblemaker's 'gifts.'"],
     [30000010,4,1,270876,"Complete the Collection: Erollisi Day Lovers"],
     [30000010,5,1,270877,"Complete the Collection: Erollisi Day Haters"],
     [30000050,1,1,270890,"an ancient cyclops"],
@@ -27517,7 +27573,7 @@
     [32070110,3,1,32005003,"Herald of the Outer Brood: Unpurged"],
     [32070111,1,1,32005101,"Remove the defenses from all six of the scalewrought guardians."],
     [32070112,1,1,32005201,"Bond with every scalewrought ravager that joins the battle."],
-    [32070113,1,1,32005301,"Don't remove any of the defenses from the Herald or its minions."],
+    [32070113,1,1,32005301,"Don't remove any of the defenses from the scalewrought guardians."],
     [32070200,1,1,32005401,"Captain Edraneth in The Theater of Eternity - Landing"],
     [32070210,1,1,32005501,"Landing: Clear the Board"],
     [32070210,2,1,32005502,"Landing: Dance Masters"],
